<resources>
    <string name="app_name">consumo</string>
    <string name="content_description_media">Image obtained from NASA API</string>
    <string name="copyright_free">copyright free</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_image_title">search image by specific dates</string>
    <string name="select_a_date">Enter a date in the format yyyy-MM-dd. E.g. 2022-02-12</string>
    <string name="search_button">search</string>
    <string name="mail_developer">noe_fam_chavez@yahoo.com.mx</string>
    <string name="name_developer">Chávez Morelos Noé Baldemar</string>
    <string name="suggestions">To communicate an error or problem in the application or any suggestion, please send it to the developer\'s email.</string>
    <string name="license_app">GNU GPLv3 License</string>
    <string name="about_title_item">about</string>
    <string name="date_title_field">Date</string>
    <string name="error_text_input_empty_title">Enter a date in yyyy-MM-dd format.</string>
</resources>